[package]
name = "multistream"
version = "0.1.0"
authors = ["Kenneth Wilke <kenneth.wilke@gmail.com>"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/KennethWilke/multistream"
license = "MIT"


[dependencies]
easy-tokio-rustls = "0.1.2"
tokio = { version = "1.17.0", features = ["full"] }
anyhow = "1.0"
