[package]
name = "multistream"
version = "0.1.0"
authors = ["Kenneth Wilke <kenneth.wilke@gmail.com>"]
edition = "2021"
description = "Provides simple abstractions for tcp/tls/unix socket servers and clients in tokio"
readme = "README.md"
repository = "https://github.com/KennethWilke/multistream"
license = "MIT"


[dependencies]
easy-tokio-rustls = "0.1.3"
tokio = { version = "1.17.0", features = ["full"] }
anyhow = "1.0"
